Flexed and centered major bodies

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,15 @@
-div {
-  color: #1df9bd;
-  font-size: 55px;
+* {
+ display: flex;
+}
+
+
+body{
+  flex-direction: column;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+.top, .middle{
+  justify-content: center;
+  align-items: center; 
 }
