--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
  display: flex;
+ box-sizing: border-box;
 }
 
 
@@ -11,10 +12,16 @@ body{
 }
 
 .top, .middle{
-  background-color: red;
+  background-color: lightgray;
   padding: 60px 0;
-  
   width: 1000px;
+  justify-content: center;
+}
+
+.middle{
+  height: 50vh;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
@@ -33,5 +40,7 @@ body{
 button{
  background-color: teal;
  padding: 20px, 100px;
- spacing: 10px;
+ margin: 30px;
+ border-radius: 12px;
+ font-size: 34px;
 }
